opnsense-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: external-opnsense
spec:
  type: ExternalName
  externalName: 192.168.1.4
  ports:
  - port: 80
    targetPort: 80
