opnsense-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    kubernetes.io/ingress.class: "nginx-internal"
    cert-manager.io/cluster-issuer: vault-admin
spec:
  rules:
  - host: opnsense.<path:apps-kv/data/general#adminDN>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-opnsense
            port:
              number: 80
  tls:
  - hosts:
    - opnsense.<path:apps-kv/data/general#adminDN>
    secretName: opnsense-tls
